# telecode

./: .gitignore  LICENSE  README.md  build.py  py2winapp.py  pyproject.toml  requirements.txt
docs/: index.html  index.md  make.py
docs/templates/: bootstrap.html  index.md
server/: learn_code.py  start_server.bat
telecode/: docs.html  main.py  settings  settings.yaml
telecode/notepad++/: config.xml  contextMenu.xml  nativeLang.xml  readme.txt  session.xml  shortcuts.xml
telecode/notepad++/backup/: demo_code.py@2018-05-04_113947
telecode/notepad++/localization/: english.xml  russian.xml
telecode/notepad++/themes/: Deep Black.xml  VSDark.xml
wxglade/: blind_board.wxg  blind_board.wxg.bak
